--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shimmer: ^3.0.0
   google_fonts: ^6.1.0
   flutter_slidable: ^3.0.1
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
